# DeckTune

./: .gitignore  BRANCHES.md  CHANGELOG.md  DEPLOY.md  ERROR_HANDLING_SUMMARY.md  FIXES_v3.5.0.md  FREQUENCY_BASED_WIZARD_TODO.md  FREQUENCY_MODE_INTEGRATION_VERIFICATION.md  INSTALL_RU.md  LICENSE  README.md  RELEASE_NOTES_v3.1.26.md  RELEASE_NOTES_v3.1.27.md  RELEASE_NOTES_v3.1.28.md  RELEASE_NOTES_v3.1.29.md  RELEASE_NOTES_v3.2.0.md  RELEASE_NOTES_v3.3.0.md  RELEASE_NOTES_v3.3.2.md  RELEASE_NOTES_v3.3.3.md  RELEASE_NOTES_v3.3.4.md  RELEASE_NOTES_v3.4.0.md  RELEASE_NOTES_v3.4.5.md  RELEASE_NOTES_v3.5.0.md  RELEASE_NOTES_v3.5.5.md  RELEASE_NOTES_v3.5.6.md  RELEASE_NOTES_v3.5.7.md  RELEASE_SUMMARY.md  ROLLBACK_SUMMARY.md  WIZARD_MODE_IMPLEMENTATION.md  check_exit.sh  debug_test.py  dev-standalone.html  diagnose_plugin.sh  install.sh  main.py  package-lock.json  package.json  plugin.json  quick_test.py  requirements.txt  (+7 more)
DeckTune/gymdeck3/fuzz/: Cargo.toml  README.md
gymdeck3/: Cargo.toml
gymdeck3/.cargo/: config.toml
gymdeck3/fuzz/dict/: config.dict
gymdeck3/fuzz/fuzz_targets/: fuzz_config_parser.rs  fuzz_fan_curve.rs
gymdeck3/src/: config.rs  hysteresis.rs  interpolation.rs  lib.rs  main.rs  output.rs  safety.rs  signals.rs  watchdog.rs
gymdeck3/src/dynamic/: frequency_controller.rs  mod.rs  voltage_controller.rs
gymdeck3/src/fan/: README.md  controller.rs  hwmon.rs  (+3 more)
gymdeck3/tests/: fan_test.proptest-regressions  fan_test.rs  frequency_curve_test.proptest-regressions  frequency_curve_test.rs  hysteresis_test.rs  sample_interval_test.rs  strategy_test.rs
(+320 files in other folders)
