[package]
name = "gymdeck3"
version = "0.1.0"
edition = "2021"
description = "Dynamic undervolt controller for Steam Deck"
authors = ["DeckTune"]
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
libc = "0.2"

[dev-dependencies]
proptest = "1"

[profile.release]
lto = true
strip = true
codegen-units = 1
opt-level = "z"
panic = "abort"

[profile.release.build-override]
opt-level = 3

# Cross-compilation target configuration
# Build with: cargo build --release --target x86_64-unknown-linux-musl
