[package]
name = "gymdeck3-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }

[dependencies.gymdeck3]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "fuzz_config_parser"
path = "fuzz_targets/fuzz_config_parser.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_core_config"
path = "fuzz_targets/fuzz_core_config.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_fan_curve"
path = "fuzz_targets/fuzz_fan_curve.rs"
test = false
doc = false
bench = false
